# yajr

./: .env  compets.csv  contest.json  convertcsv.csv  data.csv  database.py  docker-compose.yaml  ladder_100kg.xlsx  models.py  pyproject.toml
.ipynb_checkpoints/: Без названия-checkpoint.ipynb
services/judobase_api/: base.py
yajr/: main.py  models.py
yajr/services/judobase_api/: base.py
