[tool.poetry]
name = "yajr"
version = "0.1.0"
description = ""
authors = ["ddzgoev <david.dzgoev@tradebyte.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.28.0"
sqlalchemy = "^2.0.28"
fastapi = "^0.110.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
